# panorama-stitching

./: .gitignore  AGENTS.md  ASSIGNMENT_COMPLETION_GUIDE.md  CLAUDE.md  CMakeLists.txt  KEVIN_TODO.md  Makefile  README.md  RUN.sh  RUN_EXPERIMENTS.sh  SIMPLE_GUIDE.md  VIEW_RESULTS.sh  build.sh  run.sh  run_report_experiments.sh  view-results.sh
config/: CLAUDE.md
docs/: ASSIGNMENT_CHECKLIST.md  ASSIGNMENT_DOCUMENTATION.md  ASSIGNMENT_GUIDE.md  CLAUDE.md  DEMO_VIDEO_GUIDE.md  EXPERIMENT_GUIDE.md  GETTING_STARTED.md  PROJECT_STRUCTURE.md  QUICK_START.md  REPORT.md  REPORT_DRAFT.md  TECHNICAL.md
results/: metrics.csv
results_analysis/: analysis_report.html
results_analysis/visualizations/: index.html
scripts/: RUN_EXPERIMENTS.sh  RUN_FEATURE_SCALING.sh  VIEW_RESULTS.sh  analysis_pipeline.py  analyze_and_organize.py  analyze_results.py  build.sh  compile_report.sh  fix_csv_format.py  generate_pdf_report.py  generate_quantitative_analysis.py  run-experiments.sh  run_panorama.sh  validate_setup.sh
scripts/archived/: analyze_comprehensive_results.py  generate_plots.py  organize_results.py  parse_manual_results.py  parse_results.py  plot_results.py  run_complete_experiments.sh  run_comprehensive_experiments.sh  run_experiments_manual.sh
src/: config.h  main.cpp
src/cli/: argument_parser.cpp  argument_parser.h
src/experiments/: experiment_runner.cpp  experiment_runner.h  report_generator.cpp  report_generator.h  visualization.cpp  visualization.h
src/feature_detection/: akaze_detector.cpp  akaze_detector.h  detector_factory.cpp  detector_factory.h  feature_detector.cpp  feature_detector.h  orb_detector.cpp  orb_detector.h  sift_detector.cpp  sift_detector.h
src/feature_matching/: matcher.cpp  matcher.h  ransac.cpp  ransac.h
src/homography/: homography_estimator.cpp  homography_estimator.h
src/pipeline/: stitching_pipeline.cpp  stitching_pipeline.h
src/stitching/: blender.cpp  blender.h  blender_factory.cpp  blender_factory.h  image_warper.cpp  image_warper.h
tests/: test_minimal.cpp  test_pipeline.sh
